# thumbnail-generator

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
thumbnail_generator/: __init__.py  async_io.py  cli.py  core.py  video.py
thumbnail_generator/backends/: pillow.py  vips.py
